sumo/tests/sumo/errors/network/edge/lane/root__edge__lane#id__ungiven11/options.sumo
-n net.net.xml -r input_routes.rou.xml -b 0 -e 1 --no-duration-log 

